# zk-location

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md
h3-converter/: Cargo.toml
h3-converter/password-dfa/digit/: password_digit_regex_graph.json
h3-converter/password-dfa/length/: password_length_regex_graph.json
h3-converter/password-dfa/lowercase/: password_lowercase_regex_graph.json
h3-converter/password-dfa/special/: password_special_regex_graph.json
h3-converter/password-dfa/uppercase/: password_uppercase_regex_graph.json
h3-converter/src/: lib.rs  password.rs
zk-location/: .gitignore  Cargo.toml  Config.toml  build.rs  input_30.748714_103.921876_r8.json  proof_30.748714_103.921876_r8.json
zk-location/MoproAndroidBindings/uniffi/mopro/: mopro.kt
zk-location/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
zk-location/android/app/: build.gradle.kts
zk-location/android/app/src/debug/: AndroidManifest.xml
zk-location/android/app/src/debug/java/com/example/moproapp/: DebugToolsActivity.kt  PasswordProofBenchmark.kt  WitnessRegressionBenchmark.kt
zk-location/android/app/src/main/: AndroidManifest.xml
zk-location/android/app/src/main/assets/: offline_map_README.md  password_policy_commitment_final.zkey  port_trans_final.zkey  regex_record_final.zkey  regex_timestamp_final.zkey  unit_final.zkey
zk-location/android/app/src/main/java/com/example/moproapp/: CampusOfflineMap.kt  GnssLocationReader.kt  KeystoreLocationSigner.kt  LocationProofComponent.kt  MainActivity.kt  PasswordLoginApi.kt  PasswordLoginLogic.kt  PasswordLoginScreen.kt  (+7 more)
zk-location/android/app/src/main/java/uniffi/mopro/: mopro.kt
zk-location/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
zk-location/android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
zk-location/android/gradle/: libs.versions.toml
zk-location/scripts/: build-android-bindings.sh  prepare-osmdroid-campus-tiles.py
zk-location/src/: circom.rs  error.rs  lib.rs  stubs.rs
zk-location/test-vectors/circom/: regex_ip_final.zkey
zk-location/test-vectors/circom/witnesscalc/: regex_ip.cpp
zk-location/test-vectors/password/: len16.json  len32.json  len8.json  poseidon-vectors.txt
zk-location/tests/: circom.rs  ffi.rs
(+122 files in other folders)
