
# 文件功能：
# - zk-location mopro 主 crate 配置。
# - 负责生成 Android UniFFI binding、链接 Circom prover、注册 witness 和导出 Rust API。
#
# 执行流程：
# 1. mopro build 读取本配置构建 Android cdylib/staticlib。
# 2. build.rs 按平台准备 witness。
# 3. Android 通过生成的 uniffi/mopro/mopro.kt 调用本 crate 导出函数。
[package]
name = "zk-location"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = ["uniffi"]
uniffi = ["mopro-ffi/uniffi"]
flutter = ["mopro-ffi/flutter"]
wasm = ["mopro-ffi/wasm"]

[dependencies]
mopro-ffi = { version = "0.3" }
thiserror = "2.0.12"
anyhow = "1.0.99"

# CIRCOM_DEPENDENCIES

circom-prover = { version = "0.1", features = ["witnesscalc"] }
rust-witness  = "0.1"
witnesscalc-adapter = "0.1"
num-bigint    = "0.4.0"
h3-converter = { path = "../h3-converter" }
serde_json = "1.0.94"
sha2 = "0.10"
    
# HALO2_DEPENDENCIES
# NOIR_DEPENDENCIES

[build-dependencies]
# CIRCOM_BUILD_DEPENDENCIES

witnesscalc-adapter = "0.1"
rust-witness = "0.1"
    
# HALO2_BUILD_DEPENDENCIES
# NOIR_BUILD_DEPENDENCIES

[dev-dependencies]
mopro-ffi = { version = "0.3", features = ["uniffi-tests"] }

# CIRCOM_DEV_DEPENDENCIES

serde = { version = "1.0", features = ["derive"] }
    
# HALO2_DEV_DEPENDENCIES
# NOIR_DEV_DEPENDENCIES

[target.wasm32-unknown-unknown.dependencies]
mopro-ffi = { version = "0.3", features = ["wasm"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[patch.crates-io]
witnesscalc-adapter = { path = "../vendor/witnesscalc-adapter" }

    
